GUI rework part2 (#219)
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: sbancuz <sbancuz@protonmail.com>